erDiagram
    nodes {
        TEXT node_id PK
        TEXT parent_id FK
        TEXT node_type
        TEXT name
        INTEGER size_bytes
        BLOB file_key_wrapped
    }
    chunks {
        TEXT chunk_id PK
        TEXT node_id FK
        INTEGER chunk_index
        TEXT blob_name
        INTEGER size_padded
        BLOB blake3_checksum
        TEXT epoch_blob_id FK
        INTEGER byte_offset
        INTEGER byte_length
    }
    epoch_blobs {
        TEXT epoch_blob_id PK
        TEXT blob_name
        INTEGER size_padded
        BLOB blake3_checksum
    }
    manifest_meta {
        TEXT key PK
        TEXT value
    }
    pending_deletions {
        TEXT blob_name PK
        INTEGER queued_at
    }
    nodes ||--o{ nodes : "parent_id (mappe-hierarki)"
    nodes ||--o{ chunks : "ON DELETE CASCADE"
    epoch_blobs ||--o{ chunks : "epoch_blob_id"